--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,12 @@
   margin: 0;
   padding: 0rem;
   text-align: center;
+  min-width: 40%;
 }
 
+body{
+  background-color: #11193a;
+}
 .logo {
   height: 6em;
   padding: 1.5em;
